# ghappkit

./: .bandit  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  ruff.toml
.claude/skills/check-directory-structure/: SKILL.md
.claude/skills/github-api-contract-research/: SKILL.md
.claude/skills/github-api-contract-research/assets/templates/: client-contract-report.md  graphql-operation-card.md  rest-endpoint-card.md  test-vector.md
.claude/skills/github-api-contract-research/references/: auth-and-permissions.md  client-surface-mapping.md  drift-detection.md  errors-retries.md  graphql-contract.md  pagination-rate-limit.md  rest-contract.md  source-priority.md
.claude/skills/github-webhook-event-research/: SKILL.md
.claude/skills/github-webhook-event-research/assets/templates/: event-card.md  signed-test-vector.md  webhook-contract-report.md
.claude/skills/github-webhook-event-research/references/: drift-detection.md  event-naming.md  redelivery-and-idempotency.md  signature-verification.md  source-priority.md  transport-contract.md  typed-context-mapping.md
.claude/skills/lint-and-fix/: SKILL.md
.claude/skills/setup-dev-env/: SKILL.md
.codex/: config.toml
.github/workflows/: test.yml  trunk_check.yml
.trunk/: trunk.yaml
dev/: build.sh  setup.sh  test_python.sh
docs/adr/: 0001-use-uv-workspace-and-split-github-client.md
docs/rfcs/: 0001-octoflow-fastapi-github-app-framework.md
examples/custom-routes/: README.md  pyproject.toml
examples/custom-routes/custom_routes/: __init__.py  app.py
examples/issue-commenter/: README.md  pyproject.toml
examples/issue-commenter/issue_commenter/: __init__.py  app.py
examples/repo-config-demo/: README.md  pyproject.toml
examples/repo-config-demo/repo_config_demo/: __init__.py  app.py
src/ghappkit/tests/: __init__.py
