[project]
name = "ghappkit-workspace"
version = "0.1.0"
authors = [{ name = "yu-iskw" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
description = "FastAPI-native framework for production-grade GitHub Apps."
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "packages/ghappkit",
  "packages/ghappkit-client",
  "packages/ghappkit-testing",
  "examples/issue-commenter",
  "examples/repo-config-demo",
  "examples/custom-routes",
]

[tool.uv.sources]
ghappkit = { workspace = true }
ghappkit-client = { workspace = true }
ghappkit-testing = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
  "packages/ghappkit/src/ghappkit/tests",
  "packages/ghappkit-client/src/ghappkit_client/tests",
  "packages/ghappkit-testing/src/ghappkit_testing/tests",
]

[dependency-groups]
dev = [
  "xenon>=0.9.3",
  "pytest>=8.3.5",
  "pytest-cov>=6.0",
  "bandit>=1.8.3",
  "ruff>=0.15.0",
  "pyright>=1.1.0",
  "pylint>=3.3.5",
  "vulture>=2.16",
]

[tool.pyright]
include = [
  "packages/ghappkit/src",
  "packages/ghappkit-client/src",
  "packages/ghappkit-testing/src",
]
extraPaths = [
  "packages/ghappkit/src",
  "packages/ghappkit-client/src",
  "packages/ghappkit-testing/src",
]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = "warning"

[tool.vulture]
paths = [
  "packages/ghappkit/src/ghappkit",
  "packages/ghappkit-client/src/ghappkit_client",
  "packages/ghappkit-testing/src/ghappkit_testing",
]
min_confidence = 80

[tool.coverage.run]
branch = true
source = [
  "packages/ghappkit/src/ghappkit",
  "packages/ghappkit-client/src/ghappkit_client",
  "packages/ghappkit-testing/src/ghappkit_testing",
]

[tool.coverage.report]
show_missing = true
omit = ["*/tests/*"]
