[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_routes"]

[project]
name = "custom-routes-example"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["ghappkit"]

[tool.uv.sources]
ghappkit = { workspace = true }
