[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["repo_config_demo"]

[project]
name = "repo-config-demo-example"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["ghappkit"]

[tool.uv.sources]
ghappkit = { workspace = true }
